Refactor blog views to use BlogComments view model
Introduce BlogComments view model to aggregate blogs and comments for views. Update BlogController actions and refactor Index.cshtml and BlogDetalis.cshtml to use the new model. Enable lazy loading in Comments model. Add recent blogs to sidebar and localize comment form. Update project file to include new class.

--- a/TravelTripProject/Views/Blog/BlogDetalis.cshtml
+++ b/TravelTripProject/Views/Blog/BlogDetalis.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model TravelTripProject.Models.Class.BlogComments
+
 @{
     ViewBag.Title = "BlogDetalis";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
@@ -24,54 +25,56 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
     <!----//webfonts---->
-    
     <!---->
 
 </head>
 <body>
     <!---header---->
     <div class="header">
-       
+
     </div>
     <!--/header-->
     <div class="single">
         <div class="container">
             <div class="col-md-8 single-main">
                 <div class="single-grid">
-                    <img src="~/web1/images/post1.jpg" alt="" />
-                    <p>
-                        It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Nullam a efficitur odio, ac maximus lorem. Nullam aliquam fermentum lectus ut sagittis. Sed pulvinar sed ligula gravida condimentum. Proin eleifend vestibulum tortor, ut pellentesque lorem tempor a. Nunc pharetra lacus at laoreet suscipit. Aliquam tempor mattis sagittis. Mauris viverra mi quis risus molestie placerat. Sed accumsan vestibulum fringilla. Etiam dapibus tellus ac eros placerat, at aliquam arcu lobortis. Vestibulum sollicitudin mauris dui, a tempor metus lacinia sed. Nam a auctor purus, nec rutrum ipsum. Maecenas lacus ex, finibus non tempor at, ultrices id sem. Suspendisse et magna et tellus facilisis lacinia at et diam. Fusce finibus ullamcorper ligula non tristique. Nulla facilisi. Donec ultricies nisi vel quam venenatis efficitur. Praesent porta risus arcu, at egestas ante accumsan eu.
+                    @foreach (var x in Model.Deger1)
+                    {
 
-                    </p>
+                        <img src="@x.BlogImage" alt="" />
+                        <h2>@x.Baslik</h2>
+                        <p>
+                            @x.Aciklama
+                        </p>
+                    }
+
+
+
                 </div>
-                <ul class="comment-list">
+                @foreach (var x in Model.Deger2)
+                {
+                    <ul class="comment-list">
 
-                    <li>
-                        <img src="~/web1/images/avatar.png" class="img-responsive" alt="">
-                        <div class="desc">
-                            <p>Gül Karataş:Yorum yazacak her gün c# çalışacak 777
-                        </div>
-                        <div class="clearfix"></div>
-                    </li>
-                </ul>
-                <ul class="comment-list">
+                        <li>
+                            <img src="~/web1/images/avatar.png" class="img-responsive" alt="">
+                            <div class="desc">
+                                <p>@x.KullaniciAdi : @x.Yorum.</p>
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
+                    </ul>
+                }
 
-                    <li>
-                        <img src="~/web1/images/avatar.png" class="img-responsive" alt="">
-                        <div class="desc">
-                            <p>Gül Karataş:Yorum yazacak her gün c# çalışacak 777
-                        </div>
-                        <div class="clearfix"></div>
-                    </li>
-                </ul>
+
+
                 <div class="content-form">
-                    <h3>Leave a comment</h3>
+                    <h3>Bir yorum yapın</h3>
                     <form>
-                        <input type="text" placeholder="Name" required />
+                        <input type="text" placeholder="Kullanıcı Adı" required />
                         <input type="text" placeholder="Email" required />
-                        <input type="text" placeholder="Phone" required />
-                        <textarea placeholder="Message"></textarea>
-                        <input type="submit" value="SEND" />
+                        <input type="text" placeholder="Yorum" required />
+                        <textarea placeholder="Yorum"></textarea>
+                        <input type="submit" value="Gönder" />
                     </form>
                 </div>
             </div>
@@ -94,14 +97,14 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
                     </ul>
                 </div>
-               
+
             </div>
             <div class="clearfix"></div>
         </div>
     </div>
- 
-    </body>
+
+</body>
 </html>
- 
+
 
 
