--- a/TravelTripProject/Views/Blog/Index.cshtml
+++ b/TravelTripProject/Views/Blog/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using TravelTripProject.Models.Class;
-@model List<Blog>
+﻿
+@model TravelTripProject.Models.Class.BlogComments
 
 @{
     ViewBag.Title = "Index";
@@ -25,7 +25,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!----webfonts---->
     <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-  
+
 </head>
 <body>
     <!---header---->
@@ -41,7 +41,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="single">
         <div class="container">
             <div class="col-md-8 single-main">
-                @foreach (var x in Model)
+                @foreach (var x in Model.Deger1)
                 {
                     <div class="single-grid">
 
@@ -53,24 +53,26 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <p>
                             @x.Aciklama
                         </p>
-                     
+
 
                     </div>
                     <br />
                     <br />
                 }
 
-                </div>
+            </div>
 
             <div class="col-md-4 side-content">
                 <div class="recent">
                     <h3>Son Bloglar</h3>
+                    @foreach (var x in Model.Deger3)
+                    {
+                    
                     <ul>
-                        <li><a href="#">Aliquam tincidunt mauris</a></li>
-                        <li><a href="#">Vestibulum auctor dapibus  lipsum</a></li>
-                        <li><a href="#">Nunc dignissim risus consecu</a></li>
-                        <li><a href="#">Cras ornare tristiqu</a></li>
+                        <li><a href="/Blog/BlogDetalis/@x.Id">@x.Baslik</a></li>
+
                     </ul>
+                    }
                 </div>
                 <div class="comments">
                     <h3>Son Yorumlar</h3>
