--- a/TravelTripProject/Views/Blog/BlogDetalis.cshtml
+++ b/TravelTripProject/Views/Blog/BlogDetalis.cshtml
@@ -4,107 +4,74 @@
     ViewBag.Title = "BlogDetalis";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
-<html>
-<head>
-    <title>Personal Blog a Blogging Category Flat Bootstarp  Responsive Website Template | Single :: w3layouts</title>
-    <link href="~/web1/css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link href="~/web1/css/style.css" rel='stylesheet' type='text/css' />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Personal Blog Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!----webfonts---->
-    <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-    <!----//webfonts---->
-    <!---->
 
-</head>
-<body>
-    <!---header---->
-    <div class="header">
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-lg-8">
+            @foreach (var x in Model.Deger1)
+            {
+                <article class="blog-post mb-5">
+                    <img src="@x.BlogImage" class="img-fluid rounded-4 shadow-sm mb-4 w-100" alt="@x.Baslik" style="max-height: 500px; object-fit: cover;">
+                    <div class="d-flex align-items-center mb-3 text-muted">
+                        <span class="badge bg-primary me-3">Seyahat</span>
+                        <span><i class="far fa-calendar-alt me-1"></i> @x.Tarih.ToString("dd MMMM yyyy")</span>
+                        <span class="ms-3"><i class="far fa-user me-1"></i> Admin</span>
+                    </div>
+                    <h1 class="display-5 fw-bold mb-4">@x.Baslik</h1>
+                    <div class="blog-content lead text-secondary" style="line-height: 1.8;">
+                        @x.Aciklama
+                    </div>
+                </article>
+            }
 
-    </div>
-    <!--/header-->
-    <div class="single">
-        <div class="container">
-            <div class="col-md-8 single-main">
-                <div class="single-grid">
-                    @foreach (var x in Model.Deger1)
-                    {
-
-                        <img src="@x.BlogImage" alt="" />
-                        <h2>@x.Baslik</h2>
-                        <p>
-                            @x.Aciklama
-                        </p>
-                    }
-
-
-
-                </div>
+            <div class="comments-section mt-5">
+                <h3 class="fw-bold mb-4"><i class="far fa-comments me-2"></i> Yorumlar (@Model.Deger2.Count())</h3>
                 @foreach (var x in Model.Deger2)
                 {
-                    <ul class="comment-list">
-
-                        <li>
-                            <img src="~/web1/images/avatar.png" class="img-responsive" alt="">
-                            <div class="desc">
-                                <p>@x.KullaniciAdi : @x.Yorum.</p>
+                    <div class="comment-box d-flex shadow-sm">
+                        <div class="flex-shrink-0">
+                            <img src="~/web1/images/avatar.png" class="rounded-circle" alt="@x.KullaniciAdi" style="width: 50px; height: 50px;">
+                        </div>
+                        <div class="flex-grow-1 ms-3">
+                            <div class="d-flex justify-content-between align-items-center mb-2">
+                                <h6 class="fw-bold mb-0">@x.KullaniciAdi</h6>
+                                <small class="text-muted">Az önce</small>
                             </div>
-                            <div class="clearfix"></div>
-                        </li>
-                    </ul>
+                            <p class="mb-0 text-secondary">@x.Yorum</p>
+                        </div>
+                    </div>
                 }
 
-
-
-                <div class="content-form">
-                    <h3>Bir yorum yapın</h3>
-                    <form>
-                        <input type="text" placeholder="Kullanıcı Adı" required />
-                        <input type="text" placeholder="Email" required />
-                        <input type="text" placeholder="Yorum" required />
-                        <textarea placeholder="Yorum"></textarea>
-                        <input type="submit" value="Gönder" />
-                    </form>
+                <div class="mt-5">
+                    @Html.Action("YorumYap", "Blog")
                 </div>
             </div>
+        </div>
 
-            <div class="col-md-4 side-content">
-                <div class="recent">
-                    <h3>RECENT POSTS</h3>
-                    <ul>
-                        <li><a href="#">Aliquam tincidunt mauris</a></li>
-                        <li><a href="#">Vestibulum auctor dapibus  lipsum</a></li>
-                        <li><a href="#">Nunc dignissim risus consecu</a></li>
-                        <li><a href="#">Cras ornare tristiqu</a></li>
-                    </ul>
-                </div>
-                <div class="comments">
-                    <h3>RECENT COMMENTS</h3>
-                    <ul>
-                        <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
-                        <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
-                        <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
-                    </ul>
+        <div class="col-lg-4">
+            <aside class="sticky-top" style="top: 100px;">
+                <div class="card border-0 shadow-sm p-4 mb-4 bg-light">
+                    <h5 class="fw-bold mb-3">Yazar Hakkında</h5>
+                    <div class="text-center">
+                        <img src="~/web1/images/avatar.png" class="rounded-circle mb-3 shadow-sm" style="width: 100px;">
+                        <h6 class="fw-bold">Admin</h6>
+                        <p class="small text-muted">Seyahat etmeyi seven, yeni yerler keşfetmekten hoşlanan bir blogger.</p>
+                    </div>
                 </div>
 
-            </div>
-            <div class="clearfix"></div>
+                <div class="card border-0 shadow-sm p-4 mb-4">
+                    <h5 class="fw-bold mb-3">Popüler Yazılar</h5>
+                    <ul class="list-unstyled mb-0">
+                        @foreach (var x in Model.Deger3.Take(5))
+                        {
+                            <li class="mb-3">
+                                <a href="/Blog/BlogDetalis/@x.Id" class="text-decoration-none text-dark fw-medium small d-block">@x.Baslik</a>
+                                <small class="text-muted">@x.Tarih.ToString("dd.MM.yyyy")</small>
+                            </li>
+                        }
+                    </ul>
+                </div>
+            </aside>
         </div>
     </div>
-
-</body>
-</html>
-
-
-
+</div>
