--- a/TravelTripProject/Views/Blog/Index.cshtml
+++ b/TravelTripProject/Views/Blog/Index.cshtml
@@ -1,93 +1,80 @@
-﻿
-@model TravelTripProject.Models.Class.BlogComments
+﻿@model TravelTripProject.Models.Class.BlogComments
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
 }
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
--->
-<!DOCTYPE HTML>
-<html>
-<head>
-    <link href="~/web1/css/bootstrap.css" rel='stylesheet' type='text/css' />
-    <link href="~/web1/css/style.css" rel='stylesheet' type='text/css' />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="Personal Blog Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template,
-	Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-    <!----webfonts---->
-    <link href='http://fonts.googleapis.com/css?family=Oswald:100,400,300,700' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,300italic' rel='stylesheet' type='text/css'>
-
-</head>
-<body>
-    <!---header---->
-    <div class="header">
-        <div class="container">
-
-
-            <div class="clearfix"></div>
-
-        </div>
+<section class="hero-section text-center mb-5" style="padding: 60px 0;">
+    <div class="container">
+        <h1 class="display-4 fw-bold">Gezi Günlükleri</h1>
+        <p class="lead">Gezdiğimiz yerler, gördüğümüz güzellikler ve paylaştığımız anılar.</p>
     </div>
-    <!--/header-->
-    <div class="single">
-        <div class="container">
-            <div class="col-md-8 single-main">
+</section>
+
+<div class="container">
+    <div class="row">
+        <div class="col-lg-8">
+            <div class="row">
                 @foreach (var x in Model.Deger1)
                 {
-                    <div class="single-grid">
-
-                        <img src="@x.BlogImage" alt="" />
-                        <a href="/Blog/BlogDetalis/@x.Id"> @x.Baslik  </a>
-                        <p>
-                            @x.Tarih
-                        </p>
-                        <p>
-                            @x.Aciklama
-                        </p>
-
-
+                    <div class="col-12 mb-5">
+                        <article class="card border-0 shadow-sm overflow-hidden">
+                            <div class="row g-0">
+                                <div class="col-md-5">
+                                    <img src="@x.BlogImage" class="img-fluid h-100" alt="@x.Baslik" style="object-fit: cover; min-height: 250px;">
+                                </div>
+                                <div class="col-md-7">
+                                    <div class="card-body p-4">
+                                        <div class="d-flex align-items-center mb-2">
+                                            <span class="badge bg-primary me-2">Seyahat</span>
+                                            <small class="text-muted"><i class="far fa-calendar-alt me-1"></i> @x.Tarih.ToString("dd MMMM yyyy")</small>
+                                        </div>
+                                        <h3 class="card-title fw-bold mb-3">
+                                            <a href="/Blog/BlogDetalis/@x.Id" class="text-decoration-none text-dark">@x.Baslik</a>
+                                        </h3>
+                                        <p class="card-text text-secondary mb-4">
+                                            @(x.Aciklama.Length > 150 ? x.Aciklama.Substring(0, 150) + "..." : x.Aciklama)
+                                        </p>
+                                        <a href="/Blog/BlogDetalis/@x.Id" class="btn btn-primary rounded-pill btn-sm">Devamını Oku <i class="fas fa-arrow-right ms-1"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </article>
                     </div>
-                    <br />
-                    <br />
                 }
-
             </div>
+        </div>
 
-            <div class="col-md-4 side-content">
-                <div class="recent">
-                    <h3>Son Bloglar</h3>
-                    @foreach (var x in Model.Deger3)
-                    {
-                    
-                    <ul>
-                        <li><a href="/Blog/BlogDetalis/@x.Id">@x.Baslik</a></li>
-
-                    </ul>
-                    }
-                </div>
-                <div class="comments">
-                    <h3>Son Yorumlar</h3>
-                    <ul>
-                        <li><a href="#">Amada Doe </a> on <a href="#">Hello World!</a></li>
-                        <li><a href="#">Peter Doe </a> on <a href="#"> Photography</a></li>
-                        <li><a href="#">Steve Roberts  </a> on <a href="#">HTML5/CSS3</a></li>
-                    </ul>
+        <div class="col-lg-4">
+            <aside class="sticky-top" style="top: 100px;">
+                <div class="card border-0 shadow-sm p-4 mb-4">
+                    <h5 class="fw-bold mb-3">Son Bloglar</h5>
+                    <div class="list-group list-group-flush">
+                        @foreach (var x in Model.Deger3)
+                        {
+                            <a href="/Blog/BlogDetalis/@x.Id" class="list-group-item list-group-item-action border-0 px-0 d-flex align-items-start py-3">
+                                <img src="@x.BlogImage" class="rounded me-3" style="width: 60px; height: 60px; object-fit: cover;">
+                                <div>
+                                    <h6 class="mb-1 fw-bold" style="font-size: 0.9rem;">@x.Baslik</h6>
+                                    <small class="text-muted">@x.Tarih.ToString("dd.MM.yyyy")</small>
+                                </div>
+                            </a>
+                        }
+                    </div>
                 </div>
 
-            </div>
-            <div class="clearfix"></div>
+                <div class="card border-0 shadow-sm p-4">
+                    <h5 class="fw-bold mb-3">Kategoriler</h5>
+                    <div class="d-flex flex-wrap gap-2">
+                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-pill">Avrupa</a>
+                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-pill">Asya</a>
+                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-pill">Doğa</a>
+                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-pill">Yemek</a>
+                        <a href="#" class="btn btn-outline-secondary btn-sm rounded-pill">Şehir Turu</a>
+                    </div>
+                </div>
+            </aside>
         </div>
     </div>
-</body>
-</html>
-
-
+</div>
