--- a/TravelTripProject/Views/Index/Partial2.cshtml
+++ b/TravelTripProject/Views/Index/Partial2.cshtml
@@ -3,17 +3,17 @@
 
 @foreach (var x in Model)
 {
-    <div class="right">
-        <div class="bot-left">
-            <img src="@x.BlogImage" alt="" />
-        </div>
-        <div class="left-text">
-
-            <h4>@x.Baslik</h4>
-            <span class="doller">@x.Tarih.ToString("dd.MM.yyyy")</span>
-            <p>@x.Aciklama.Substring(0,80)</p>
-            <p><a href="/Blog/BlogDetalis/@x.Id"><span class="read">Devamını Oku >></span></a></p>
+    <div class="col-md-4 mb-4">
+        <div class="card h-100 border-0 shadow-sm">
+            <img src="@x.BlogImage" class="card-img-top blog-post-img" alt="@x.Baslik">
+            <div class="card-body">
+                <h5 class="card-title fw-bold">@x.Baslik</h5>
+                <p class="text-muted small mb-2"><i class="far fa-calendar-alt me-1"></i> @x.Tarih.ToString("dd.MM.yyyy")</p>
+                <p class="card-text text-secondary">
+                    @(x.Aciklama.Length > 100 ? x.Aciklama.Substring(0, 100) + "..." : x.Aciklama)
+                </p>
+                <a href="/Blog/BlogDetalis/@x.Id" class="btn btn-outline-primary btn-sm rounded-pill">Devamını Oku</a>
+            </div>
         </div>
     </div>
-
 }
