--- a/TravelTripProject/Views/Index/Partial3.cshtml
+++ b/TravelTripProject/Views/Index/Partial3.cshtml
@@ -1,18 +1,19 @@
 ﻿@using TravelTripProject.Models.Class;
 @model List<Blog>
 
-<div class="padding">
-    <h4>En Popüler 10 Blog</h4>
-   
-    <ul class="list list-pad">
+<div class="card border-0 shadow-sm p-4 mb-4">
+    <h4 class="fw-bold mb-4">En Popüler 10 Blog</h4>
+    <div class="list-group list-group-flush">
         @{int i = 0;}
         @foreach (var x in Model)
         {
-            <li class="list-bg"><span>@{i++;} @i.</span><a href="/Blog/BlogDetalis/@x.Id">@x.Baslik</a></li>
+            <a href="/Blog/BlogDetalis/@x.Id" class="list-group-item list-group-item-action border-0 px-0 d-flex align-items-center">
+                <span class="badge bg-primary rounded-pill me-3">@{i++;} @i</span>
+                <span class="text-secondary fw-medium">@x.Baslik</span>
+            </a>
         }
-        </ul>
-   
-
-    <a href="/Blok/Index" class="link1">Tüm blokları gör
-    </a>
+    </div>
+    <div class="mt-4 text-center">
+        <a href="/Blog/Index" class="btn btn-primary rounded-pill btn-sm">Tüm blogları gör</a>
+    </div>
 </div>
