--- a/TravelTripProject/Views/Shared/_AdminLayout.cshtml
+++ b/TravelTripProject/Views/Shared/_AdminLayout.cshtml
@@ -107,7 +107,7 @@
                         <button class="btn btn-outline-secondary btn-sm rounded-pill me-2">
                             <i class="fas fa-bell"></i>
                         </button>
-                        <a href="#" class="btn btn-outline-danger btn-sm rounded-pill">
+                        <a href="/GirisYap/Logout/" class="btn btn-outline-danger btn-sm rounded-pill">
                             <i class="fas fa-sign-out-alt"></i> Çıkış
                         </a>
                     </div>
