--- a/TravelTripProject/Views/Admin/YorumListesi.cshtml
+++ b/TravelTripProject/Views/Admin/YorumListesi.cshtml
@@ -25,8 +25,8 @@
             <td>@x.Mail </td>
             <td>@x.Yorum </td>
             <td>@x.Blog.Baslik </td>
-            <td><a href="#" class="btn btn-danger">Sil</a> </td>
-            <td><a href="#" class="btn btn-warning">Güncelle</a> </td>
+            <td><a href="/Admin/YorumSil/@x.Id" class="btn btn-danger">Sil</a> </td>
+            <td><a href="/Admin/YorumGetir/@x.Id" class="btn btn-warning">Güncelle</a> </td>
 
         </tr>
     }
